# btp-example-9

./: .black  Jenkinsfile  README.md  gemini.Jenkinsfile  gpt.Jenkinsfile  grok.Jenkinsfile  llm.Jenkinsfile  pyproject.toml  qwen.Jenkinsfile  requirements.txt
src/: calculator.py
