[tool.poetry]
name = "sample-repo"
version = "0.1.0"
description = "A simple Python calculator"
authors = ["Dev <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = ">=23.0.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
